--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -19,9 +19,10 @@
             android:textSize="20dp"
             android:textColor="#000000"/>
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,11 +54,23 @@
                     android:text="135,34"
                     android:textSize="20dp"
                     android:layout_weight="4"/>
-
-
-
             </LinearLayout>
-        </ScrollView>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_launcher"
+                android:visibility="gone"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="뉴스 제목 ~~~~~"
+                android:textSize="25dp"
+                android:textColor="#000000"
+                android:visibility="gone"/>
+        </LinearLayout>
+
     </LinearLayout>
 
 
