--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -68,8 +68,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="인기 검색"
-                    android:textSize="30dp"
+                    android:text="최근 검색 기록"
+                    android:textSize="25dp"
                     android:textColor="#000000"
                     android:textStyle="bold"
                     android:layout_marginBottom="10dp"
@@ -116,37 +116,42 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="거래량"
+                    android:text="인기 검색"
                     android:textSize="30dp"
                     android:textColor="#000000"
                     android:textStyle="bold"
                     android:layout_marginBottom="10dp"
                     />
                 <TextView
+                    android:id="@+id/seach_rank_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="1. TQQQ"
                     android:textSize="30dp"
                     />
                 <TextView
+                    android:id="@+id/seach_rank_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="2. 삼성전자"
                     android:textSize="30dp"
                     />
                 <TextView
+                    android:id="@+id/seach_rank_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="3. 테슬라"
                     android:textSize="30dp"
                     />
                 <TextView
+                    android:id="@+id/seach_rank_4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="4. SOXL"
                     android:textSize="30dp"
                     />
                 <TextView
+                    android:id="@+id/seach_rank_5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="5. 애플"
