--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/box_inset_layout_padding"
-    tools:context=".MainActivity2"
+    tools:context=".MainActivity"
     tools:deviceIds="wear">
 
     <LinearLayout
@@ -34,6 +34,24 @@
                 />
 
         </androidx.appcompat.widget.Toolbar>
+
+<!--        임시-->
+        <EditText
+            android:id="@+id/login_tmp_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:id="@+id/login_tmp_pwd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/login_tmp_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+
 
         <ImageView
             android:layout_width="match_parent"
