--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -6,4 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".InfoActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/info_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="#273238">
+
+        <TextView
+            android:id="@+id/info_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="주식 제목"
+            android:textSize="30sp"
+            android:textColor="#ffffff"
+            android:layout_gravity="left"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            />
+
+    </androidx.appcompat.widget.Toolbar>
+
+
+    <TextView
+        android:id="@+id/info_news_title"
+        app:layout_constraintTop_toBottomOf="@+id/info_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="최신 뉴스"
+        android:textSize="20dp"/>
+    <ListView
+        android:id="@+id/info_news"
+        app:layout_constraintTop_toBottomOf="@+id/info_news_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/info_simi_title"
+        app:layout_constraintTop_toBottomOf="@+id/info_news"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="관련 종목"
+        android:textSize="20dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
