--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
             android:gravity="center">
 
             <Button
+                android:id="@+id/btn_wishlist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
@@ -99,6 +100,7 @@
                 android:background="#000000"
                 />
             <Button
+                android:id="@+id/btn_holding"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
