--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -46,6 +46,11 @@
         android:layout_height="wrap_content"
         android:text="관련 종목"
         android:textSize="20dp"/>
+    <ListView
+        android:id="@+id/info_simi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/info_simi_title"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
