--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -26,10 +26,33 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-
+    <LinearLayout
+        android:id="@+id/info_realtime"
+        app:layout_constraintTop_toBottomOf="@+id/info_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/info_realtime_now"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/info_realtime_diff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/info_realtime_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </LinearLayout>
     <TextView
         android:id="@+id/info_news_title"
-        app:layout_constraintTop_toBottomOf="@+id/info_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/info_realtime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="최신 뉴스"
