--- a/app/src/main/res/layout/fragment_holding.xml
+++ b/app/src/main/res/layout/fragment_holding.xml
@@ -10,4 +10,15 @@
         android:textSize="30sp"
         android:text="holding"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbarFadeDuration="0"
+        android:scrollbarSize="5dp"
+        android:scrollbarThumbVertical="@android:color/darker_gray"
+        android:scrollbars="vertical"
+        android:layout_weight="1">
+    </androidx.recyclerview.widget.RecyclerView>
+
 </FrameLayout>
